<?xml version="1.0" encoding="utf-8"?>

<!--    @author Jonathan Swanepoel and Suvanth Ramruthen-->
<!--    This file designed the ECD Content Page layout within the application -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/flexboxLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FAFAFA"
        android:padding="10dp"
        app:alignContent="flex_start"
        app:alignItems="center"
        app:flexDirection="row"
        app:flexWrap="wrap"
        app:justifyContent="flex_end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <HorizontalScrollView
            android:id="@+id/filterScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fadeScrollbars="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/categoryAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:background="@drawable/custom_button_clicked"
                    android:text="@string/all"
                    android:textAllCaps="false"
                    android:textSize="10dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/categoryAssignedContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:background="@drawable/custom_button_initial"
                    android:padding="12dp"
                    android:text="@string/assigned_content"
                    android:textAllCaps="false"
                    android:textSize="10dp">

                </androidx.appcompat.widget.AppCompatButton>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/categoryBabyHealth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:background="@drawable/custom_button_initial"
                    android:text="@string/baby_health"
                    android:textAllCaps="false"
                    android:textSize="10dp">

                </androidx.appcompat.widget.AppCompatButton>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/categoryBabyDevelopment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"

                    android:background="@drawable/custom_button_initial"
                    android:padding="12dp"
                    android:text="@string/baby_development"
                    android:textAllCaps="false"
                    android:textSize="10dp">

                </androidx.appcompat.widget.AppCompatButton>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/categoryParentHealth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:background="@drawable/custom_button_initial"
                    android:text="@string/parent_health"
                    android:textAllCaps="false"
                    android:textSize="10dp">

                </androidx.appcompat.widget.AppCompatButton>


            </LinearLayout>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false"
            android:padding="@dimen/big_padding"
            android:scrollbars="vertical"
            tools:listitem="@layout/recyclerview_item" />
    </com.google.android.flexbox.FlexboxLayout>

    <TextView
        android:id="@+id/textViewPostStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/no_content_in_this_category"
        android:visibility="invisible"
        app:layout_alignSelf="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463">

    </TextView>

    <TextView
        android:id="@+id/textViewanchor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="No content in this category"
        android:visibility="invisible"
        app:layout_alignSelf="baseline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>