<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <item android:id="@+id/menu_search"
        android:title="Search"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView">

    </item>


    <item android:id="@+id/menu_sync"
        android:title="Sync"
        android:icon="@drawable/ic_sync"
        android:iconTint="@color/white"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.AppCompatImageView">
    </item>
    





</menu>