<?xml version="1.0" encoding="utf-8"?>

<!--    @author Jonathan Swanepoel and Suvanth Ramruthen-->
<!--    This file designed the detailed ECD post page within the application -->

<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:padding="16dp"
    app:alignContent="flex_start"
    app:alignItems="center"
    app:flexDirection="row"
    app:flexWrap="wrap"
    app:justifyContent="flex_start">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/psbold"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/ecd_title"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_flexBasisPercent="100%" />

    <androidx.cardview.widget.CardView
        android:id="@+id/triggerFullscreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp">

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#E6F0EA"
            android:fontFamily="@font/psbold"
            android:paddingLeft="25dp"
            android:paddingTop="5dp"
            android:paddingRight="25dp"
            android:paddingBottom="5dp"
            android:text="@string/category"
            android:textColor="#000000" />
    </androidx.cardview.widget.CardView>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/videoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:alignContent="center"
        app:alignItems="center"
        app:flexDirection="row"
        app:flexWrap="wrap"
        app:justifyContent="center"
        app:layout_flexBasisPercent="100%">

        <ImageView
            android:id="@+id/videoImageButton"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/videobutton" />
    </com.google.android.flexbox.FlexboxLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp"
        app:layout_flexBasisPercent="100%">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageBbpPortal">

            <TextView
                android:id="@+id/tvContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/psmedium"
                android:padding="16dp"
                android:text="@string/ecd_content_available_for_you"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />
        </ScrollView>

    </androidx.cardview.widget.CardView>
</com.google.android.flexbox.FlexboxLayout>


